deploy/base/webhook/mutatingwebhook.yaml
# Copyright 2018 The Kubernetes Authors.
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "gcsfuse-sidecar-injector.csi.storage.gke.io"
webhooks:
  - name: "gcsfuse-sidecar-injector.csi.storage.gke.io"
    matchPolicy: Equivalent
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods", "pods/eviction"]
        scope: "Namespaced"
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["persistentvolumes"]
        scope: "Cluster"
    clientConfig:
      caBundle: ""
      service:
        namespace: "gcs-fuse-csi-driver"
        name: "gcs-fuse-csi-driver-webhook"
        path: "/inject"
    failurePolicy: Ignore # will not block other Pod requests
    admissionReviewVersions: ["v1"]
    sideEffects: None
    reinvocationPolicy: Never
    timeoutSeconds: 3
